src/objects/Apttus_Config2__PriceRuleset__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The ruleset criteria specification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ruleset Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description of the rule set</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The rule set effective date. The rule set becomes effective on this date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndPricePointId__c</fullName>
        <description>Record Id of the ending Price Point for this Waterfall</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Record Id of the ending Price Point for this Waterfall</inlineHelpText>
        <label>End Price Point Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExclusionCriteria__c</fullName>
        <description>The ruleset exclusion criteria specification</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The ruleset exclusion criteria specification</inlineHelpText>
        <label>Ruleset Exclusion Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The rule set expiration date. The rule set becomes ineffective after this date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>The product category associated with the rule set</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>The product family associated with the rule set</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartPricePointId__c</fullName>
        <description>Record Id of the starting Price Point for this Price Waterfall</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Record Id of the starting Price Point for this Price Waterfall</inlineHelpText>
        <label>Start Price Point Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>